--- a/src/App.css
+++ b/src/App.css
@@ -5,76 +5,83 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    color: #261D19;
   }
-  
-  .container-detail{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+/* Home titulo principal */
 
- /*    background-color: #deb887;
-    width: 550px;
-    height: 550px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    margin: 20px;
-    padding: 20px; */
-  }  
-  
-  .container-detail-todo{
-    background-color: #deb887;
-    text-align: center;
-    width: 500px;
-    height: 700px;
-    border-radius: 10px;
-  }
-  
-  .img-detail{
-    width: 350px;
-    height: 300px;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 10px;
-  }
-  
-  .container-title-di{
-    font-size: 25px;
-    font-weight: bolder;
-    color: black;
-  }
-
-.container-parrafo-di{
-  padding: 10px;
-  margin: 10px;
-}
-.container-price-di{
-    font-size: 20px;
-    color: black;
-}
-.container-mensaje{
-    color: #ffffff;
-    padding: 10px;
-}
-.container-p{
+  .homeTitle{
     font-size: 30px;
-    color: black;
-    text-align: center;
-    padding: 10px;
-    margin: 10px;
+    color: #261D19;
     font-weight: bolder;
-} 
+    text-align: center;
+    margin-top: 30px;
+    text-shadow: 2px 2px 4px #BF9D8A;
+  }
+  
+  /* Estilos del detalle */
+
+  .detailContainer{
+    max-width: 1400px;
+    text-align: center;
+  }
+
+  .detail{
+    padding: 50px;
+    display: flex;
+  }
+
+  .detailImg{
+    display: flex;
+    justify-content: center;
+    width: 600px;
+  }
+
+  .detailImgImg{
+    width: 400px;
+    height: 500px;
+  }
+  
+  .detailTodo{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    max-width: 55%;
+  }
+  
+  .detailTitle{
+    font-size: 2.5rem;
+    color: #261D19;
+    font-weight: bold;
+  }
+
+  .detailDescription{
+    font-size: 22px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .detailPrice{
+    font-size: 30px;
+    color: #261D19;
+    font-weight: bold;
+  }
+
+  .detailMensaje{
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 500;
+  }
 
 /* Loading */
 
 .lds-ellipsis {
-  display: inline-block;
-  position: relative;
+  display: flex;
+  position: absolute;
   width: 80px;
   height: 80px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .lds-ellipsis div {
   position: absolute;
@@ -82,7 +89,7 @@ body {
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: #fff;
+  background: #261D19;
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 .lds-ellipsis div:nth-child(1) {
@@ -124,4 +131,168 @@ body {
   100% {
     transform: translate(24px, 0);
   }
+}
+
+/* Estilos del carrito */
+
+.cartContainer {
+  text-align: start;
+  max-width: 1000px;
+  margin: 50px auto;
+  padding: 20px;
+}
+
+.cartItem {
+  display: grid;
+  grid-template-columns: 2fr 0.5fr 1fr 1.5fr;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 1.5px solid #D9D6D0;
+  width: 100%;
+  position: relative;
+  transition: background-color 0.3s ease;
+}
+
+.cartItem:hover {
+  background-color: #f5f5f5cd;
+}
+
+.cartDelButton{
+  margin: 12px;
+}
+
+.cartButton {
+  background-color: #59362E;
+  color: white;
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  width: 110px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.cartButton:hover {
+  background-color: #8C5C4A;
+}
+
+.cartProducts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.cartNombres{
+  display: grid;
+  grid-template-columns: 2fr 0.5fr 1fr 1.5fr;
+  padding: 15px;
+  margin: 10px;
+  width: 100%;
+  position: relative;
+  color: #261D19;
+}
+
+.cartItemDelete {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  background: #2a2a2a;
+  opacity: 0;
+  border-radius: 50%;
+  transition: 0.3s;
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.cartItem:hover .cartItemDelete {
+  opacity: 1;
+}
+
+.cartItem,
+.cartButton,
+.cartItemDelete {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+svg {
+  font-size: 1.5rem;
+  color: #cccccc;
+}
+
+.cartTotal {
+  grid-column: 4;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  text-align: end;
+  margin-top: 20px;
+  
+  span {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 5px;
+    
+    &:last-child {
+      text-align: end;
+      font-size: 2rem;
+    }
+  }
+}
+
+
+/* Formulario del carrito */
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 70%;
+  margin: 50px auto;
+}
+.formSpan{
+  color: #261D19;
+  font-size: 20px;
+  font-weight: 500;
+  text-shadow: 2px 2px 4px #BF9D8A;
+}
+.form input.formInput {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #d1d1d1;
+  border-radius: 8px;
+  margin-bottom: 16px;
+  color: white;
+  background-color: #BF9D8A;
+  transition: border-color 0.3s ease, transform 0.3s ease; /* Agregar transición de transformación */
+  transform: translateY(0); 
+}
+
+.form input.formInput:focus {
+  border-color: #8C5C4A;
+  transform: translateX(6px);
+}
+
+.formButton {
+  background-color: #59362E;
+  color: white;
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: 500;
+  height: 50px;
+  width: 130px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s;
+  margin-top: 10px;
+}
+
+.formButton:hover {
+  background-color: #8C5C4A;
 }
