--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,4 @@
-.containerHeader {
+.footer{
     max-width: 1400px;
     height: 150px;
     margin: 0 auto;
@@ -9,15 +9,4 @@
     align-items: center;
     color: #000000;
     box-shadow: 0px 30px 15px -30px #59362E;
-}
-
-.nav_items{
-    display: flex;
-    gap: 50px;
-    font-size: 18px;
-}
-
-.logo{
-    width: 150px;
-    height: 150px;
 }
